hphp/hack/test/typecheck/expression_trees/self_static_method_call.php.exp
ERROR: File "self_static_method_call.php", line 13, characters 28-43:
Static method calls in expression trees require explicit class names. (Parsing[1002])
ERROR: File "self_static_method_call.php", line 13, characters 28-43:
Invalid return type (Typing[4110])
  File "expr_tree.php", line 72, characters 21-26:
  Expected `string`
  File "expr_tree.php", line 84, characters 28-43:
    resulting from expanding the type constant `ExampleDsl::TAst`
  File "self_static_method_call.php", line 8, characters 6-93:
  But got `Awaitable<ExprTree<ExampleDsl, string, (function(string): int)>>`
ERROR: File "self_static_method_call.php", line 13, characters 38-42:
Invalid argument (Typing[4110])
  File "self_static_method_call.php", line 7, characters 5-18:
  Expected `ExampleContext`
  File "self_static_method_call.php", line 13, characters 38-42:
  But got `string`
